# karmabot

./: .bettercodehub.yml  .env  .env_example  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  Contributors.md  LICENSE  Pipfile  Procfile  README.md  app.json  azure-pipelines.yml  bot.sh  contributors.md  docker-compose.yml  env.example  main.py  mypy.ini  noxfile.py  pyproject.toml  redeploy.sh  requirements-test.txt  requirements.txt  run.sh  tox.ini
.github/workflows/: coverage.yml  pre_release.yml  release.yml  safety.yml  tests.yml
bot/: __init__.py  karma.py  settings.py  slack.py
bot/db/: __all_models.py  db_session.py  karma_transaction.py  karma_user.py  slack_user.py
commands/: add.py  age.py  ban_user.py  doc.py  feed.py  hello.py  help.py  network.py  score.py  template.py  tip.py  topchannels.py  unban_all.py  unban_user.py  update_username.py  welcome.py  zen.py
requirements/: requirements.txt  requirements_dev.txt  requirements_test.txt
src/karmabot/: __init__.py  __main__.py  bot.py  exceptions.py  karma.py  main.py  settings.py  slack.py
src/karmabot/bot/: slack.py
src/karmabot/bot/db/: karma_user.py  modelbase.py
src/karmabot/commands/: add.py  age.py  control.py  doc.py  feed.py  joke.py  note.py  score.py  template.py  tip.py  topchannels.py  update_username.py  welcome.py  zen.py
src/karmabot/db/: __all_models.py  database.py  db_session.py  karma_note.py  karma_transaction.py  karma_user.py  modelbase.py
src/karmabot/utils/: dict_to_db.py  get_botid.py
test/: slack_testdata.py  tests.py
tests/: conftest.py  slack_testdata.py  test_bot.py  test_core.py  test_db.py  test_karma.py  test_karma_commands.py  test_karmabot.py  test_messages.py  test_settings.py  test_slack.py  test_users.py  tests.py
tests/commands/: test_add.py  test_age.py  test_joke.py  test_topchannels.py
utils/: dict_to_db.py  get_botid.py
