[tool.poetry]
authors = ["PyBites <info@pybit.es>", "Patrick-Oliver Groß <mail@pogross.de>"]
description = "PyBites Karmabot - A Python based Slack Chatbot for Community interaction"
homepage = "https://github.com/PyBites-Open-Source/karmabot"
keywords = ["karmabot"]
license = "MIT"
name = "karmabot"
readme = "README.md"
repository = "https://github.com/PyBites-Open-Source/karmabot"
version = "1.4"

[tool.poetry.dependencies]
SQLAlchemy = "^1.4.2"
feedparser = "6.0.2"
humanize = "^3.3.0"
importlib-metadata = "^3.7.3"
psycopg2-binary = "^2.8.6"
pyjokes = "^0.6.0"
python = "^3.8"
python-dotenv = "^0.15.0"
slack-bolt = "^1.6.1"
slack-sdk = "^3.4.2"
slackeventsapi = "^2.2.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
codecov = "^2.1.11"
coverage = {extras = ["toml"], version = "^5.5"}
flake8 = "^3.9.0"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^21.3"
freezegun = "^1.1.0"
isort = "^5.8.0"
mutpy = "^0.6.1"
mypy = "^0.812"
nox = "^2021.6.12"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
pytest-mock = "^3.5.1"
safety = "^1.10.3"

[tool.poetry.scripts]
karmabot = "karmabot.main:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
omit = ["src/karmabot/__main__.py", "src/karmabot/__init__.py", "src/karmabot/main.py"]
source = ["karmabot"]

[tool.coverage.report]
show_missing = true

[tool.black]
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.nox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )
)
'''
include = '\.pyi?$'
line-length = 88
target-version = ["py38", "py39"]

[tool.isort]
known_third_party = "dotenv,feedparser,humanize,pyjokes,pytest,requests,slackclient,sqlalchemy"
profile = "black"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
